[gd_scene load_steps=7 format=3 uid="uid://c071vduxkcrkp"]

[ext_resource type="Texture2D" uid="uid://ddhd81cb6nhdk" path="res://User Interface/MainMenu/Day/1.png" id="1_3tv8c"]
[ext_resource type="Script" uid="uid://y3qu4hp6ytir" path="res://User Interface/MainMenu/mainmenu.gd" id="1_rrxur"]
[ext_resource type="Texture2D" uid="uid://buyfgn0n7jpia" path="res://User Interface/MainMenu/Day/2.png" id="2_5p71o"]
[ext_resource type="Script" uid="uid://b0f5llu0bti7h" path="res://User Interface/MainMenu/Dev_Node.gd" id="2_eswma"]
[ext_resource type="Texture2D" uid="uid://duhwor80ydx6s" path="res://User Interface/MainMenu/Day/3.png" id="3_i175a"]
[ext_resource type="Texture2D" uid="uid://2otlrnf0c53b" path="res://User Interface/MainMenu/Day/5.png" id="4_woq86"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rrxur")

[node name="Dev Node" type="Node" parent="."]
script = ExtResource("2_eswma")
DeveloperMode = true
DeveloperName = "Nathan"

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3tv8c")

[node name="Background 2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5p71o")

[node name="Background 3" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_i175a")

[node name="Background 4" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_woq86")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 115
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_font_sizes/font_size = 50
text = "Escaped Experiment"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 75
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.454524, 0.454524, 0.454524, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="Help" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 50
text = "Help
"

[node name="Testing" type="Button" parent="VBoxContainer/Buttons"]
visible = false
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 50
text = "Testing"

[node name="Quit" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 50
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Buttons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Testing" to="." method="_on_test_room_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Quit" to="." method="_on_quit_pressed"]
